# laptop-tools

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  TODO  configure.ac
scripts/: Makefile.am  laptop-tools  laptop-tools-config
src/: Makefile.am  handlers.c  handlers.h  laptop-tools  laptop-tools-config  laptop_event.c  laptop_event.h  laptop_monitor.c  laptop_monitor.h  logger.c  logger.h  lt_device.c  lt_device.h  lt_event.c  lt_event.h  lt_instance.c  lt_instance.h  lt_monitor.c  lt_monitor.h  lt_settings.c  lt_settings.h  tools.c
test/: Makefile.am  mouse.c
